samples/_failures_safe/1761691697_aa59e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6940074.c: In function ‘main’:
./samples/SAFE/__tmp_b6940074.c:159:17: error: expected ‘;’ at end of input
  159 |     add_matrices
      |                 ^
      |                 ;
./samples/SAFE/__tmp_b6940074.c:159:5: error: expected declaration or statement at end of input
  159 |     add_matrices
      |     ^~~~~~~~~~~~
